--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ espressoCore = "3.5.1"
 appcompat = "1.6.1"
 ktorVersion = "3.2.3"
 lifecycleViewmodelKtx = "2.7.0"
-material = "1.10.0"
+material = "1.14.0-alpha06"
 constraintlayout = "2.1.4"
 navigationFragmentKtx = "2.6.0"
 navigationUiKtx = "2.6.0"
